@@ -51,7 +51,7 @@ void Serial1Baud(unsigned long baud);
 void Serial1SendBreak(void);
 void Serial1Flush(void);
 
-unsigned long ClockTicks();
+unsigned long ClockTicks(void);
 void ClockMilliSecondsDelay(unsigned long ms);
 void ClockMicroSecondsDelay(unsigned int us);
 
@@ -126,7 +126,7 @@ void Serial0IrqHandler (void) __interrupt (4);
 void Serial1IrqHandler (void) __interrupt (7);
 
 #if !defined(__SDCC_ds400)
-void ClockInit();
+void ClockInit(void);
 void ClockIrqHandler (void) __interrupt (1) __naked;
 #endif
 
